@@ -383,7 +383,9 @@ void owl_zephyr_zlocate(char *user, char *out, int auth) {
   }
 
   if (numlocs==0) {
-    strcpy(out, "Hidden or not logged-in\n");
+    myuser=short_zuser(user);
+    sprintf(out, "%s: Hidden or not logged-in\n", myuser);
+    owl_free(myuser);
     return;
   }
     
