@@ -3,6 +3,7 @@ $Id$
 1.2.7
 	Outgoing messages now go through the config for formatting
 	Zaway now makes an outgoing message, instead of an admin message
+	The 'zlocate' command can now handle multiple users
 	
 1.2.6
 	Started adding code for newmsgproc.  It doesn't fully work yet!
